1/ Prepare project for gitHub repository

--- a/README
+++ b/README
@@ -1,1 +1,12 @@
-Project that created for testing all features from Parsley Framework 
+Project that created for testing all features from Parsley Framework
+
+TODO:
+
+# Dynamic View Wiring;
+# Building Modular Applications
+# Building MVC Architectures
+# Localization
+# Extending the Framework
+# Remoting
+# Logging Configuration
+# Refactoring (!)
